cbits/skia_capi/skparagraph.h

SK_C_API void skparagraph_paragraph_builder_add_text_utf8_len(
    skparagraph_paragraph_builder_t *builder, const char *text, size_t len
);
SK_C_API void skparagraph_paragraph_builder_add_placeholder(
    skparagraph_paragraph_builder_t *builder,
    skparagraph_placeholder_style_t *instyle
);
SK_C_API skparagraph_paragraph_t *skparagraph_paragraph_builder_build(
    skparagraph_paragraph_builder_t *builder
);
SK_C_API void skparagraph_paragraph_builder_push_style(
    skparagraph_paragraph_builder_t *builder, skparagraph_text_style_t *style
);
SK_C_API void skparagraph_paragraph_builder_pop(
    skparagraph_paragraph_builder_t *builder
);
SK_C_API void skparagraph_paragraph_builder_reset(skparagraph_paragraph_builder_t *builderP);