src/Skia/Bindings/Skparagraph.hs


-- | Function pointer to 'skparagraph_paragraph_builder_add_text_utf8_len'
foreign import ccall "&skparagraph_paragraph_builder_add_text_utf8_len" p'skparagraph_paragraph_builder_add_text_utf8_len ::
  FunPtr (Ptr (Skparagraph_paragraph_builder) -> Ptr (CChar) -> CSize -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_builder_add_placeholder(skparagraph_paragraph_builder_t *builder, skparagraph_placeholder_style_t *instyle)
@
-}
foreign import ccall "skparagraph_paragraph_builder_add_placeholder" skparagraph_paragraph_builder_add_placeholder ::
  Ptr (Skparagraph_paragraph_builder) -- ^ C argument @"skparagraph_paragraph_builder_t * builder"@
  -> Ptr (Skparagraph_placeholder_style) -- ^ C argument @"skparagraph_placeholder_style_t * instyle"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_builder_add_placeholder'
foreign import ccall "&skparagraph_paragraph_builder_add_placeholder" p'skparagraph_paragraph_builder_add_placeholder ::
  FunPtr (Ptr (Skparagraph_paragraph_builder) -> Ptr (Skparagraph_placeholder_style) -> IO (()))

{- | C function signature:

@
skparagraph_paragraph_t *skparagraph_paragraph_builder_build(skparagraph_paragraph_builder_t *builder)
@
-}
foreign import ccall "skparagraph_paragraph_builder_build" skparagraph_paragraph_builder_build ::
  Ptr (Skparagraph_paragraph_builder) -- ^ C argument @"skparagraph_paragraph_builder_t * builder"@
  -> IO (Ptr (Skparagraph_paragraph)) -- ^ C return type: @"skparagraph_paragraph_t *"@

-- | Function pointer to 'skparagraph_paragraph_builder_build'
foreign import ccall "&skparagraph_paragraph_builder_build" p'skparagraph_paragraph_builder_build ::
  FunPtr (Ptr (Skparagraph_paragraph_builder) -> IO (Ptr (Skparagraph_paragraph)))

{- | C function signature:

@
void skparagraph_paragraph_builder_push_style(skparagraph_paragraph_builder_t *builder, skparagraph_text_style_t *style)
@
-}
foreign import ccall "skparagraph_paragraph_builder_push_style" skparagraph_paragraph_builder_push_style ::
  Ptr (Skparagraph_paragraph_builder) -- ^ C argument @"skparagraph_paragraph_builder_t * builder"@
  -> Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_builder_push_style'
foreign import ccall "&skparagraph_paragraph_builder_push_style" p'skparagraph_paragraph_builder_push_style ::
  FunPtr (Ptr (Skparagraph_paragraph_builder) -> Ptr (Skparagraph_text_style) -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_builder_pop(skparagraph_paragraph_builder_t *builder)
@
-}
foreign import ccall "skparagraph_paragraph_builder_pop" skparagraph_paragraph_builder_pop ::
  Ptr (Skparagraph_paragraph_builder) -- ^ C argument @"skparagraph_paragraph_builder_t * builder"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_builder_pop'
foreign import ccall "&skparagraph_paragraph_builder_pop" p'skparagraph_paragraph_builder_pop ::
  FunPtr (Ptr (Skparagraph_paragraph_builder) -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_builder_reset(skparagraph_paragraph_builder_t *builderP)
@
-}
foreign import ccall "skparagraph_paragraph_builder_reset" skparagraph_paragraph_builder_reset ::
  Ptr (Skparagraph_paragraph_builder) -- ^ C argument @"skparagraph_paragraph_builder_t * builderP"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_builder_reset'
foreign import ccall "&skparagraph_paragraph_builder_reset" p'skparagraph_paragraph_builder_reset ::
  FunPtr (Ptr (Skparagraph_paragraph_builder) -> IO (()))
